--- a/congrats.html
+++ b/congrats.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Congrats! You signed up.</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Congrats on joining the ultimate Tennis webpage!</h1>
