--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  <main>
     <h1>Playing Tennis</h1>
+      <section id="intro">
     <p>The most important first step to playing tennis is finding a racket. Once you find a racket you need a ball. <b>Combining these two elements makes tennis possible</b>. Many people will say you need a court and a partner, but you can at least practice against a wall if you have the primary elements.</p>
     <p>Next, you want to hit the ball. Here is a picture of what that might look like:</p>
     <img src="tennis1.jpg" alt="hitting a tennis ball" />
@@ -15,8 +17,10 @@
     	<li>Racket</li>
     	<li>Yourself</li>
     </ol>
-    <p><a href="signup.html">Sign up for more info here.</a></p>
+    </section>
+    <p id="signup"><a href="signup.html">Sign up for more info here.</a></p>
     <h3>If you don't think our instructions are sufficient:</h3>
     <p>We think that we've covered pretty much everything but if for whatever reason you are still looking for more info about how to play tennis, you can visit the <a href="https://www.usta.com/en/home/play/lots-of-ways-to-play/adult.html">USTA site</a> for less information formatted with divs. Be aware, they seem to use divs almost exclusively when formatting their site. This can make the markup somewhat challenging to navigate and the CSS is probably very long and complicated. They do have pretty pictures and nice use of lists though, so that's nice.</p> 
+  </main>
   </body>
 </html>
